@@ -84,6 +84,9 @@
     * Implementation changes:
 
       + Unpack nested tag expression in 'button_to()'.
+      + Input helpers call '_input()' to render themselves. It subsumes the
+        old '_set_input_attrs()' code.
+        
 
 - Port doctests in 'html' subpackage to unit tests.
 
